fix: add padding-block to nestedLink for improved spacing

--- a/packages/app/styles/AppNav.module.scss
+++ b/packages/app/styles/AppNav.module.scss
@@ -98,6 +98,7 @@
   text-decoration: none;
   font-size: 12px;
   padding-left: 16px;
+  padding-block: 2px;
   transition: all 0.2s ease-in-out;
   overflow: hidden;
   text-overflow: ellipsis;
